background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
-  background-size: 100%;
+  background-size: 100vw 100vh;
   background-image: url("../resources/background.jpg");
   background-attachment: fixed;
 }
